@@ -7,6 +7,11 @@ What's New in Python 3.5.0 final?
 
 Release date: 2015-09-13
 
+Build
+-----
+
+- Issue #25071: Windows installer should not require TargetDir
+  parameter when installing quietly
 
 What's New in Python 3.5.0 release candidate 4?
 ===============================================
